--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   </header>
 
   <section>
-    <p>Bienvenue sur cette application d'entraînement dédiée à l'épreuve redoutable de l'expression écrite du TCF Canada. Cette plateforme a été conçue pour vous permettre de vous exercer sur des sujets récents dans des conditions proches de l'examen réel. Vous trouverez un chronomètre à droite de votre écran, qui se déclenchera automatiquement dès que vous commencerez à saisir et un clavier visuel avec des caractères spéciaux.</p>
+    <p>Bienvenue sur cette application d'entraînement dédiée à l'épreuve rédoutable de l'expression écrite du TCF Canada. Cette plateforme a été conçue pour vous permettre de vous exercer sur des sujets récents dans des conditions proches de l'examen réel. Vous trouverez un chronomètre à droite de votre écran, qui se déclenchera automatiquement dès que vous commencerez à saisir et un clavier visuel avec des caractères spéciaux.</p>
 
     <p><strong>Recommandation :</strong> Il est recommandé de travailler sur un ordinateur équipé d'un clavier Azerty. Si vous ne disposez pas d'un clavier Azerty, vous pouvez vous procurer un clavier externe dans les magasins spécialisés en matériel informatique.</p>
 
@@ -96,7 +96,7 @@
     <p>Si vous avez des sujets que vous souhaitez aborder en conditions réelles, n'hésitez pas à me contacter au <strong><a href="tel:+237690962085">690962085 (WhatsApp)</a></strong> ou par e-mail à l'adresse <strong><a href="mailto:roolys.tekem@gmail.com">roolys.tekem@gmail.com</a></strong>. Je les compilerai et les mettrai en ligne pour vous.</p>
 
 
-    <p><em>Ensemble, démystifions l'épreuve du C2 à l'expression écrite du TCF Canada.</em></p>
+    <p><em>Ensemble, démystifions une rédaction de niveau C2 à l'expression écrite du TCF Canada.</em></p>
     <p><em>Bon courage dans votre préparation.</em></p>
 
 
