--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
     <ul>
       <li><a href="https://roolys.github.io/ee-combinaison1/">Entraînement - Combinaison 1</a></li>
       <li><a href="https://roolys.github.io/ee-combinaison2/">Entraînement - Combinaison 2</a></li>
+      <li><a href="https://roolys.github.io/ee-combinaison3/">Entraînement - Combinaison 3</a></li>
+      <li><a href="https://roolys.github.io/ee-combinaison4/">Entraînement - Combinaison 4</a></li>
     </ul>
   </section>
 
