--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     <!-- Message pour encourager l'entraînement -->
     <p>N'hésitez pas à cliquer sur les liens suivants pour vous entraînez</p>
-    <p>Sujets récents de janvier 2024</p>
+    <p>Sujets récents de 2024</p>
     <ul>
       <li><a href="https://roolys.github.io/ee-combinaison1/">Entraînement - Combinaison 1</a></li>
       <li><a href="https://roolys.github.io/ee-combinaison2/">Entraînement - Combinaison 2</a></li>
