--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
       <li><a href="https://roolys.github.io/ee-combinaison2/">Entraînement - Combinaison 2</a></li>
       <li><a href="https://roolys.github.io/ee-combinaison3/">Entraînement - Combinaison 3</a></li>
       <li><a href="https://roolys.github.io/ee-combinaison4/">Entraînement - Combinaison 4</a></li>
+      <li><a href="https://roolys.github.io/ee-combinaison5/">Entraînement - Combinaison 5</a></li>
+      <li><a href="https://roolys.github.io/ee-combinaison6/">Entraînement - Combinaison 6</a></li>
+
     </ul>
   </section>
 
