--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
       <li><a href="https://roolys.github.io/ee-combinaison4/">Entraînement - Combinaison 4</a></li>
       <li><a href="https://roolys.github.io/ee-combinaison5/">Entraînement - Combinaison 5</a></li>
       <li><a href="https://roolys.github.io/ee-combinaison6/">Entraînement - Combinaison 6</a></li>
+      <li><a href="https://roolys.github.io/ee-combinaison7/">Entraînement - Combinaison 7</a></li>
 
     </ul>
   </section>
