--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
 
     <p>Si vous avez des sujets que vous souhaitez aborder en conditions réelles, n'hésitez pas à me contacter au <strong><a href="tel:+237690962085">690962085 (WhatsApp)</a></strong> ou par e-mail à l'adresse <strong><a href="mailto:roolys.tekem@gmail.com">roolys.tekem@gmail.com</a></strong>. Je les compilerai et les mettrai en ligne pour vous.</p>
 
+    <p>
+      Consultez ce lien pour vous imprégner de la méthodologie de l'expression écrite :
+            
+      <a href="https://drive.google.com/drive/folders/1FhkVSVwfQ-vmstZ7qHINhp8vePYt_7o6?usp=sharing">METHODOLOGIE Expression Ecrite</a>
+    </p>
 
     <p><em>Ensemble, démystifions une rédaction de niveau C2 à l'expression écrite du TCF Canada.</em></p>
     <p><em>Bon courage dans votre préparation.</em></p>
