change_to_netlify

--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
     <p>N'hésitez pas à cliquer sur les liens suivants pour vous entraînez</p>
     <p>Sujets récents de 2024</p>
     <ul>
-      <li><a href="https://roolys.github.io/ee-combinaison1/">Entraînement - Combinaison 1</a></li>
-      <li><a href="https://roolys.github.io/ee-combinaison2/">Entraînement - Combinaison 2</a></li>
-      <li><a href="https://roolys.github.io/ee-combinaison3/">Entraînement - Combinaison 3</a></li>
-      <li><a href="https://roolys.github.io/ee-combinaison4/">Entraînement - Combinaison 4</a></li>
-      <li><a href="https://roolys.github.io/ee-combinaison5/">Entraînement - Combinaison 5</a></li>
-      <li><a href="https://roolys.github.io/ee-combinaison6/">Entraînement - Combinaison 6</a></li>
-      <li><a href="https://roolys.github.io/ee-combinaison7/">Entraînement - Combinaison 7</a></li>
+      <li><a href="https://expression-ecrite-tcf-combinaison1.netlify.app/">Entraînement - Combinaison 1</a></li>
+      <li><a href="https://expression-ecrite-tcf-combinaison2.netlify.app/">Entraînement - Combinaison 2</a></li>
+      <li><a href="https://expression-ecrite-tcf-combinaison3.netlify.app/">Entraînement - Combinaison 3</a></li>
+      <li><a href="https://expression-ecrite-tcf-combinaison4.netlify.app/">Entraînement - Combinaison 4</a></li>
+      <li><a href="https://expression-ecrite-tcf-combinaison5.netlify.app/">Entraînement - Combinaison 5</a></li>
+      <li><a href="https://expression-ecrite-tcf-combinaison6.netlify.app/">Entraînement - Combinaison 6</a></li>
+      <li><a href="https://expression-ecrite-tcf-combinaison7.netlify.app/">Entraînement - Combinaison 7</a></li>
 
     </ul>
   </section>
